add more values in table

--- a/curie-weiss-notation-main.tex
+++ b/curie-weiss-notation-main.tex
@@ -694,31 +694,31 @@
 	\begin{table}[h]
 		\centering
 		\caption{The critical point values for some quantities. The number $n$ denotes the critical points starting with $n=1$ for the one with the lowest temperature.}
-		\begin{tabular}{|c|c|c|c|c|c|c|}
+		\begin{tabular}{c|c|c|c|c|c|c|}
 			\hline
 			$n$ & $T^*_c$ & $\mu^*_c$ & $\bar{y}_c$ & $\beta^*_c$ & $\rho^*_c$ & $P^*_c$ \\
 			\hline
-			1 & 0.254567 & -0.313065 & 2.01870 & 3.92823 & 0.513896 & 0.0503397  \\
-			2 & 0.261881 & 0.0587688 & 5.74906 & 3.81852 & 1.50557 & 0.437695  \\
-			3 & 0.265254 & 0.363828 & 9.43632 & 3.76996 & 2.50303 & 1.05817 \\
-			4 & \textcolor{blue}{0.267242} & \textcolor{blue}{0.639949} & \textcolor{blue}{13.1039} & \textcolor{blue}{3.74193} & \textcolor{blue}{3.50191} & \textcolor{blue}{1.89369} \\
-			5 & & & & & & \\
+			1 & 0.254567 & 0.209380 & 2.01870 & 3.92823 & 0.513896 & 0.0503397  \\
+			2 & 0.261881 & 0.585097 & 5.74906 & 3.81852 & 1.50557 & 0.437695  \\
+			3 & 0.265254 & 0.891843 & 9.43632 & 3.76996 & 2.50303 & 1.05817 \\
+			4 & 0.267242 & 1.16893  & 13.1039 & 3.74193 & 3.50191 & 1.89369 \\
+			5 & 0.268562 & 1.42932  & 16.7608 & 3.72354 & 4.50131 & 2.93781 \\
 			\hline
 			$n$ & $\beta_c\mu_c$ & $\beta_c P_c v$ & $\bar{z}_c=\bar{y}_c+\mu^*_c/T^*_c$ & $\bar{y}_c+\mu^*_c/T^*_c + \ln v^*$ & $\frac{T_c(n)}{T_c(n-1)}$ & $\frac{T_c(n)}{T_c(n=1)}$ \\
 			\hline
-			1 & -1.22979 & 0.197746 & 0.788910 & 2.39835 & $-$ & 1.00000 \\
-			2 & 0.224410 & 1.67135  & 5.97347 & 7.58291 & 1.02873 & 1.02873 \\
-			3 & 1.37162  & 3.98927  & 10.8079 & 12.4174 & 1.01288 & 1.04198 \\
-			4 & \textcolor{blue}{2.39464}  & \textcolor{blue}{7.08603}& \textcolor{blue}{15.4985} & \textcolor{blue}{17.1080} & & \\
-			5 &  & & & & & \\
+			1 & 0.822492 & 0.197746 & 2.84119 & 4.45063 & $-$ & 1.00000 \\
+			2 & 2.23421  & 1.67135  & 7.98327 & 9.59270 & 1.02873 & 1.02873 \\
+			3 & 3.36222  & 3.98927  & 12.7985 & 14.4080 & 1.01288 & 1.04198 \\
+			4 & 4.37404  & 7.08603 & 17.4779 & 19.0874 & 1.00749 & 1.04979 \\
+			5 & 5.32214  & 10.9390 & 22.0829 & 23.6924 & 1.00494 & 1.05497 \\
 			\hline
 			$n$ & $E(T^*_c,\mu^*_c)$ & $E_1(T^*_c,\mu^*_c)$ & $E_2(T^*_c,\mu^*_c)$ & $E_3(T^*_c,\mu^*_c)$ & $E_4(T^*_c,\mu^*_c)$ & $S^*_c$  \\
 			\hline
-			1 & 0.197746 & 0.0 & 0.0 & 0.0 & -0.120306 & 4.48401 \\
-			2 & 1.67135  & 0.0 & 0.0 & 0.0 & -0.113509 & 3.35912 \\
-			3 & 3.98927  & 0.0 & 0.0 & 0.0 & -0.110425 & 2.90550 \\
-			4 & & 0.0 & 0.0 & 0.0 & & \\
-			5 & & & & & & \\
+			1 & 0.197746 & 0.0 & 0.0 & 0.0 & -0.120306 & 2.43173 \\
+			2 & 1.67135  & 0.0 & 0.0 & 0.0 & -0.113509 & 1.34933 \\
+			3 & 3.98927  & 0.0 & 0.0 & 0.0 & -0.110425 & 0.914901 \\
+			4 & 7.08603  & 0.0 & 0.0 & 0.0 & -0.108631 & 0.631157 \\
+			5 & 10.9390  & 0.0 & 0.0 & 0.0 & -0.107455 & 0.417427 \\
 			\hline
 		\end{tabular}
 		\label{tab:cp}
