--- a/notation.tex
+++ b/notation.tex
@@ -132,3 +132,5 @@ $\bar{y} = \bar{y}(T^*,\mu^*)$ - function that maximizes $E(T^*,\mu^*;y)$.
 GPF - Grand Partition Function;
 
 CW - Curie-Weiss
+
+vdW - van der Waals
