add plot for pressure vs mu

--- a/curie-weiss-notation-main.tex
+++ b/curie-weiss-notation-main.tex
@@ -596,6 +596,21 @@
 	\end{equation}
 	%This enables us to calculate the equation of state.
 	
+	The dependence of the number density $\rho^*$ on the chemical potential $\mu^*$ at some values of temperature $T^*$ is illustrated in Fig.~\ref{fig:rho_vs_mu_a1}.
+	
+	\begin{figure}[htbp]
+		\includegraphics[width=0.45\textwidth,angle=0]{images/rho_vs_mu_a1}
+		\hfill
+		\includegraphics[width=0.45\textwidth,angle=0]{images/p_vs_mu_a1}
+		\\
+		%\captionsetup{width=0.5\textwidth}
+		\parbox{0.45\textwidth}{\caption{\label{fig:rho_vs_mu_a1} The particle number density $\rho^*(T^*,\mu^*)$ as a function of $\mu^*$ at different value of temperature: Red - $T^*=0.4$; Blue - $T^*=0.25$; Green - $T^*=0.20$.}}
+		\hfill
+		%\captionsetup{width=0.5\textwidth}
+		\parbox{0.45\textwidth}{\caption{\label{fig:p_vs_mu_a1} Pressure $P^*(T^*,\mu^*)$ as a function of $\mu^*$ at different value of temperature: Red - $T^*=0.4$; Blue - $T^*=0.25$; Green - $T^*=0.20$.}}
+	\end{figure}
+	
+	
 	\section{Equation of state}
 	We have got relation $P^* = P^*(T^*, \mu^*)$ in~\eqref{eos:reduced}. Now, having found the density $\rho^* = \rho^*(T^*,\mu^*)$ in~\eqref{rho_vs_T_mu}, we can formally solve this equation with respect to $\mu^*$ to find $\mu^* = \mu^*(T^*,\rho^*)$, and substitute back into~\eqref{eos:reduced} to get pressure as a function of density and temperature (cf.~\cite[(2.28)]{KKD20})
 	\begin{equation}
@@ -723,6 +738,8 @@
 		\end{tabular}
 		\label{tab:cp}
 	\end{table}
+	
+	
 	
 	\pagebreak
 	\section{Entropy}
